# coding-agent-evals

./: .gitignore  README.md  pyproject.toml
data/old_tasks/: v0_functions.jsonl  v10_osc_total_200.jsonl  v2_bugfix_harder.jsonl  v3_split_task_categories.jsonl  v4_split_task_categories_plus20_medium.jsonl  v7_oscillationtasks.jsonl  v8_osc_total_200.jsonl
data/results/: manual_audit_v11_label_view.jsonl  manual_audit_v11_labels.jsonl  manual_audit_v11_samples.jsonl
data/results/legacy/: oscillation_trajectory_extracts_v8.md
data/results/multi_model_results/: multi_model_results.json  summary.txt
data/results/multi_model_results_temp2/: multi_model_results.json  summary.txt
data/results/multi_model_results_zzz/: multi_model_results.json  summary.txt
data/results/reports/: stability_results4.json  stability_results5.json  stability_results6.json
data/tasks/: v11_osc_failed_zzz_qwen2_5_coder_7b_instruct_q6_k.jsonl  v11_osc_total_200.jsonl  v1_bugfix.jsonl  v5_5tier_list.jsonl  v6_fixedtiers.jsonl  v9_fixedtiers.jsonl
reports/: stability_results.json  stability_results2.json
src/coding_eval/: ab_readout.py  ablation_readout.py  agent.py  approach.py  approach_classifier.py  approach_detection.py  audit_runs.py  compare_bugfix_across_runs.py  compare_run_hash.py  extended_analysis.py  generate_v9_v10.py  llm.py  metrics.py  multi_model_analysis.py  oscillation_metrics.py  run_ablations.ps1  run_ablations_oscillation.ps1  run_eval.py  run_v0.py  runner.py  sandbox.py  schema.py  smoke_one.py  tasks.py
